# bazel-build-event-converter

./: .bazelrc  .gitignore  .swiftlint.yml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod
.github/workflows/: bazel-ci.yml
Sources/: BUILD.bazel
Sources/BEPConverter/: BepConverter.swift  JUnitXMLBEPConverter.swift
Sources/JUnit/: JUnitXML.swift  JUnitXMLNode.swift
Sources/bepc/: bepc.swift
Tests/: BUILD.bazel
Tests/JUnitTests/: JUnitXMLTests.swift
Tools/: BUILD.bazel  non_module_deps.bzl
