load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

alias(
    name = "bepc",
    actual = "//Sources:bepc",
)

alias(
    name = "lint",
    actual = "//Tools:lint",
)

xcodeproj(
    name = "xcode",
    project_name = "BazelBuildEventConverter",
    top_level_targets = [
        top_level_target("//Sources:bepc"),
        top_level_target("//Tests:BEPConverterTests"),
        top_level_target("//Tests:JUnitXMLTests"),
    ],
)

exports_files([
    ".swiftlint.yml",
])
