"""Defines the bzlmod module"""

module(
    name = "bazel_build_event_converter",
    version = "0",
    bazel_compatibility = [
        "<7.0.0",
        ">=6.0.0",
    ],
    compatibility_level = 1,
)

# - Direct deps

bazel_dep(
    name = "apple_support",
    version = "1.11.1",
)
bazel_dep(
    name = "rules_swift",
    version = "1.13.0",
)
bazel_dep(
    name = "rules_apple",
    version = "3.1.1",
)
bazel_dep(
    name = "swift_bep_parser",
    version = "0",
)

# TODO: replace with relace
git_override(
    module_name = "swift_bep_parser",
    remote = "https://github.com/luispadron/swift-bep-parser.git",
    commit = "b9f331eda96fd6ed9ac8d6bc95cc3b4745b23565",
)

# - Development Deps

bazel_dep(
    name = "rules_xcodeproj",
    version = "1.13.0",
    dev_dependency = True,
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.0.0.1",
    dev_dependency = True,
)
bazel_dep(
    name = "swiftlint",
    version = "0.53.0",
    dev_dependency = True,
)

apple_cc_configure = use_extension("@apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")
