load("@rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

swift_binary(
    name = "bepc",
    srcs = ["bepc/bepc.swift"],
    visibility = ["//visibility:public"],
    deps = [
        ":BEPConverter.lib",
        "@swift_argument_parser//:ArgumentParser",
    ],
)

swift_library(
    name = "BEPConverter.lib",
    srcs = glob(["BEPConverter/**/*.swift"]),
    module_name = "BEPConverter",
    visibility = ["//visibility:public"],
    deps = [
        ":JUnit.lib",
        "@swift_bep_parser//SwiftBEPParser/Sources:SwiftBEPParser",
    ],
)

swift_library(
    name = "JUnit.lib",
    srcs = glob(["JUnit/**/*.swift"]),
    module_name = "JUnit",
    visibility = ["//visibility:public"],
    deps = [],
)
