load("@rules_swift//swift:swift.bzl", "swift_test")

package(default_visibility = ["@rules_xcodeproj//xcodeproj:generated"])

swift_test(
    name = "BEPConverterTests",
    srcs = glob(["BEPConverterTests/**/*.swift"]),
    deps = ["//Sources:BEPConverter.lib"],
)

swift_test(
    name = "JUnitTests",
    srcs = glob(["JUnitTests/**/*.swift"]),
    deps = ["//Sources:JUnit.lib"],
)
